[package]
name = "nats-replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1"
async-nats = "0.18"
tokio = { version = "1", features = [ "full" ] }
futures-util = "0.3"

chrono = "0.4"

tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
